--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
       <footer>
         Copyright &copy; - Decembre 2022 - Tous droits resevés. 
-      </footer>
+      </footer>¸
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8878630800493660"
+     crossorigin="anonymous"></script>
+
 </body>
 </html>
